@@ -255,6 +255,10 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            width=1,
                            loop.angle=0,
                            loop.angle2=0,
+                           label.family="serif",
+                           label.font=1,
+                           label.cex=1,
+                           label.color="darkblue",
                            arrow.mode=i.get.arrow.mode),
                          plot=list(layout=layout.random,
                            margin=0))
